[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/settings_demo.gd" id="1"]

[node name="SettingsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AUDIO SETTINGS DEMO"
horizontal_alignment = 1

[node name="OpenSettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Open Settings Menu"

[node name="TestSFXButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Test SFX (Card Draw)"

[node name="ShowValuesButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Show Current Values"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Settings:
Master Volume: 100%
SFX Volume: 100%
Music Volume: 80%
Reduced Motion: OFF"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"

[node name="SettingsMenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
